kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reader
  labels:
    app: reader
